src/test/ui/static/static-mut-not-pat.stderr
error[E0530]: match bindings cannot shadow mutable statics
  --> $DIR/static-mut-not-pat.rs:13:9
   |
LL | static mut a: isize = 3;
   | ------------------------ the mutable static `a` is defined here
...
LL |         a => {}
   |         ^ cannot be named the same as a mutable static

error[E0530]: match bindings cannot shadow mutable statics
  --> $DIR/static-mut-not-pat.rs:36:9
   |
LL | static mut STATIC_MUT_FOO: Foo = Foo { bar: Some(Direction::West), baz: NEW_FALSE };
   | ------------------------------------------------------------------------------------ the mutable static `STATIC_MUT_FOO` is defined here
...
LL |         STATIC_MUT_FOO => (),
   |         ^^^^^^^^^^^^^^ cannot be named the same as a mutable static

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0530`.
